@@ -1,3 +1,5 @@
+* Make client_api() cache empty results. [jddalton]
+
 * Enable dom result caching by fixing how mutation event bugs are handled and rename `BUGGY_QSAPI` to `RE_BUGGY_QSAPI`. [jddalton]
 
 * Optimize client_api() cached performance when passing a callback. [jddalton]
